crates/views/re_view_spatial/tests/integration/snapshots/integration__topology_errors__2d_view_at_root.snap
---
source: crates/views/re_view_spatial/tests/integration/topology_errors.rs
expression: "snapshot_visualizer_errors(&test_context, view_id)"
---
"Boxes3D": /misplaced_boxes3d_entity: Can't visualize 3D content that is under a pinhole projection.
"Ellipsoids3D": /disconnected_entity: No transform path from "disconnected" to the view's target frame ("world").
"Points2D": /points2d_entity: This 2D content has a pinhole transform frame ancestor ("pinhole"), but the 2D view's target frame doesn't have a pinhole root.
"Points3D": /points3d_entity: 3D visualizers require a pinhole at the origin of the 2D view.
